2013-03-31  Andrew Cohen  <cohen@bu.edu>

	* nnir.el (nnir-method-default-engines): And another typo.

2013-03-30  Andrew Cohen  <cohen@bu.edu>

	* nnir.el (nnir-method-default-engines): Fix typo.

2013-03-29  Andrew Cohen  <cohen@bu.edu>

	* nnir.el: Define 'number-sequence for xemacs.
	(gnus-summary-create-nnir-group): New function to create an nnir group
	from an nnir summary buffer based on the current query.
	(nnir-request-create-group): Update to allow nnir group creation based
	on the current query.

2013-03-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nndraft.el (nndraft-request-expire-articles):
	Make expiry target always `delete'.

2013-03-27  Andrew Cohen  <cohen@bu.edu>

	* gnus-msg.el (gnus-setup-message): When replying from an nnir summary
	buffer use the posting-style and gcc of the original article group.
	(gnus-inews-insert-gcc): Don't set gcc-self for virtual groups.

	* nnir.el: Fix byte-compile warning. nnoo-define-skeleton should come
	after other deffoos.

2013-03-25  Andrew Cohen  <cohen@bu.edu>

	* nnir.el: Major rewrite. Cleaner separation between searches and group
	management. Marks are now shown in nnir summary buffers. Rudimentary
	support for real (i.e. not ephemeral) nnir groups.
	(gnus-summary-make-nnir-group): New function for initiating searches
	from a summary buffer.

2013-03-18  Sam Steingold  <sds@gnu.org>

	* message.el (message-bury): Minor cleanup.

2013-03-07  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-cite.el: Specify utf-8, not iso-8859-1, for ASCII file.

2013-03-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nndir.el (nndir-request-list): Remove 2nd argument passed to
	nnml-request-list.  (Bug#13873)
	(nndir-request-newsgroups): Remove, unused.

	* nndraft.el (nndraft-request-newsgroups): Remove, unused.

2013-03-05  Paul Eggert  <eggert@cs.ucla.edu>

	* deuglify.el, gnus-delay.el, gnus-spec.el, gnus-sum.el, html2text.el,
	message.el, mm-decode.el, mml1991.el, nnir.el, shr.el, utf7.el: